--- a/src/Networking/Networking.csproj
+++ b/src/Networking/Networking.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
